@@ -32,6 +32,7 @@
 #include "io/image_format_fits.h"
 #include "io/sequence.h"
 #include "gui/image_display.h"
+#include "gui/callbacks.h"
 #include "gui/utils.h"	// for lookup_widget()
 #include "gui/progress_and_log.h"
 #include "gui/dialogs.h"
@@ -1134,6 +1135,8 @@ void toggle_histogram_window_visibility(int _invocation) {
 			setup_ght_dialog();
 			updateGHTcontrols();
 		}
+		if (gui.rendering_mode == LINEAR_DISPLAY)
+			setup_stretch_sliders(); // In linear mode, set sliders to 0 / 65535
 		siril_open_dialog("histogram_dialog");
 	}
 }
