@@ -18,7 +18,7 @@ v1.2.0-beta2 March 12, 2023
 * Added a warning when trying to read one-frame SER files
 * Autodetect libfftw threading support
 * Add support for Torch-based StarNet executables
-
+* Improve hi/lo slider behaviour in stretch dialogs
 
 v1.2.0-beta1 February 24, 2023
 
