@@ -19,6 +19,7 @@ siril 1.2.0-beta2
 * Added a warning when trying to read one-frame SER files
 * Autodetect libfftw threading support
 * Add support for Torch-based StarNet executables
+* Improve hi/lo slider behaviour in stretch dialogs
 
 siril 1.2.0-beta1
 02/24/23
